Fix new code overflow issue

--- a/github-dark.css
+++ b/github-dark.css
@@ -117,6 +117,9 @@
   .vcard-fullname, .vcard-username {
     overflow-y: hidden !important;
   }
+  code {
+    overflow: visible !important;
+  }
   /* === logo === */
   .header .site, #adv_code_search .search-page-input {
     background: #111 !important;
